# load-test-server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml  docker-compose.yml  grafana.ini  prometheus.yaml  start.sh
.github/workflows/: ci.yml
monitoring-config/: grafana-dashboard-provisioning.yml  grafana-ds-provisioning.yml  video-dashboard.json
proto/: webrtc.proto
src/: config.rs  crypto.rs  data.rs  dtls.rs  endpoint_read_write.rs  error.rs  handlers.rs  helpers.rs  log.rs  main.rs  metrics.rs  offer_websocket.rs  peer_connection.rs  rest.rs  sdp.rs  server.rs  session.rs  stats.rs  udp.rs  utils.rs  webrtc_pool.rs  ws.rs
src/mux/: endpoint.rs  mod.rs  mux_func.rs
static/: bundle.js  index.html  index.js  package.json
