[package]
name = "server"
version = "0.1.0"
authors = ["David DiMaria <david.dimaria@littlebearlabs.io>"]
edition = "2018"

[dependencies]
libwebrtc = { path = "../webrtc", package="webrtc" }
nanoid = "0.4.0"
prost = "0.8"
prost-types = "0.8" 
strum = { version = "0.21", features = ["derive"] }
thiserror = "1.0"
# tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.2.19", features = ["fmt", "env-filter"] }
prometheus = "0.13.0"
lazy_static = "1.4.0"
# warp for metrics endpoint
warp = "0.3"

# ws dependencies
axum = { version = "0.1.3", features = ["ws"] }
bytes = "1.0.1"
futures = "0.3"
hyper = { version = "0.14.11", features = ["full"] }
log = "0.4.14"
media_pipeline = { path = "../media_pipeline"}
pretty_env_logger = "0.4.0"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.9.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.1", features = ["full"] }
dashmap = "4.0.2"

[build-dependencies]
tonic-build = "0.5"
