[package]
name = "server"
version = "0.1.0"
authors = ["David DiMaria <david@littlebearlabs.io>"]
edition = "2018"

[dependencies]
dashmap = "4.0.2"
dogstatsd = "0.6.2"
dotenv = "0.15.0"
envy = "0.4"
lazy_static = "1.4.0"
libwebrtc = { path = "../webrtc", package="webrtc" }
log = "0.4.14"
media_pipeline = { path = "../media_pipeline"}
nanoid = "0.4.0"
pretty_env_logger = "0.4.0"
prost = "0.8"
prost-types = "0.8" 
serde = { version = "1.0.127", features = ["derive"] }
# serde_json = "1.0"
strum = { version = "0.21", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.9.0", features = ["full"] }
tonic = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.2.19", features = ["fmt", "env-filter"] }

[build-dependencies]
tonic-build = "0.5"
